Merge branch 'GMO2'
    - Disabled implicitgetstubonthis by default
    - Inserted missing headers
    - Resolved PROACTIVE-652 aka Cannot set Immediate services before message reception
    - Introduced @ImmediateService annotation
    - Resolved PROACTIVE-522 generic compliant version of newActive & turnActive
    - New paproperty that specifies where to write generated classes if needded
    - Introducing @PAProxy and related annotations
    - Added @IgnoreMethod annotation
    - Added AbstractRemoteLocksManager as reference implementation for RemoteLocksManager and copy its methods into the generated paproxy object
    - Introducing RemoteLockManager
    - Introducing @unwrapfuture, @TurnRemote[Param], @TurnActive[Param]
      annotations
    - PROACTIVE-732: Added functional test
    - PROACTIVE-732: Added GCMASnapshot and GCMVNSnapshot
    - Add check for migration and FT with ISUT
    - Enhance tests for ISUT
    - RemoteObject support for internal classes
    - Added ProACtiveLifeCycle.IsProActiveStarted() for compatibility reason

git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/trunk@14546 28e8926c-6b08-0410-baaa-805c5e19b8d6